# cffreference

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  Cargo.toml  Main.hs  README.md  ghc-haddock.m  install-app.m  project.yaml  repository-manual.m
.github/workflows/: cffconvert.yml
src/: lib.rs  main.rs
tests/: configuration.rs  const.rs  description.rs  trigger.rs  version.rs
